<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/tv_title"
            android:padding="20dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:fontFamily="@font/montserrat_bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:id = "@+id/et_note"
            android:hint="@string/enter_note"
            android:inputType="text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_note"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id = "@+id/btn_ok"
                android:text = "@string/ok"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@color/black"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id = "@+id/btn_cancel"
                android:text = "@string/cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@android:color/transparent"/>
        </LinearLayout>

    </RelativeLayout>
