<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="item"
            type="com.maq.spinapp.viewmodels.ItemViewModel" />

    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ListView
            android:id="@+id/lv_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_done"
            android:layout_marginBottom="20dp"
            android:text="@string/done"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>