<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_back"
        android:title="@string/back"
        app:showAsAction="ifRoom" />
</menu>